- added timer to navigator - fixed overlapping columns in songbook

--- a/Singalong/public/stylesheets/main.css
+++ b/Singalong/public/stylesheets/main.css
@@ -7,16 +7,30 @@ only screen and (min-device-pixel-ratio: 2) {
 	}
 
 	.playlist {
-		font-size: 175%;
+		font-size: 150%;
 	}
 
 	.track {
-		font-size: 175%;
+		font-size: 150%;
 	}
 } 
 
 
 @media all {
+	.two-columns {
+		column-count: 2;
+		-moz-column-count: 2;
+		-webkit-column-count: 2;
+		font-size:130%;
+	}
+
+	.panel {
+		margin-bottom:5px;
+	}
+
+	.navbar {
+		margin-bottom:5px;
+	}
 
 	body {
 		padding: 5px;
@@ -31,22 +45,22 @@ only screen and (min-device-pixel-ratio: 2) {
 	}
 
 	.wrap-playlists {
-		height: calc(100vh - 360px);
+		height: calc(100vh - 230px);
 		overflow-y: scroll;
 	}
 
 	.wrap-playlist {
-		height: calc(100vh - 290px);
+		height: calc(100vh - 180px);
 		overflow-y: scroll;
 	}
 
 	.lyrics {
-		white-space: pre
+		white-space: pre-wrap
 	  }
 
 	.spotify-player {
 		position:fixed;
-		bottom:15px;
+		bottom:0px;
 		background-color: white;
 		border-color: white;
 		opacity: 0.4;
@@ -67,6 +81,7 @@ only screen and (min-device-pixel-ratio: 2) {
     }
 
     .track-slider {
+        left:22%;
         display:inline-block;
 		border-radius: 5px; 
         -webkit-appearance: none;
@@ -98,7 +113,14 @@ only screen and (min-device-pixel-ratio: 2) {
 
     .next {
         right:0%;
-    }
+	}
+	
+	.timer {
+		right:16%;
+		width:20px;
+		display:inline-block;
+		position: absolute;
+	}
 
 }
 
@@ -115,10 +137,13 @@ only screen and (min-device-pixel-ratio: 2) {
 	}
 
 	.track-slider {
-        left:28%;
         top:1vw;
         height:.5vw;
-    }
+	}
+	
+	.timer {
+        top:0.75vw;
+	}
     
 }
 
@@ -134,9 +159,13 @@ only screen and (min-device-pixel-ratio: 2) {
 	}
 
 	.track-slider {
-        left:28%;
         top:1vh;
         height:0.5vh;
     }
+
+	.timer {
+        top:0.6vh;
+	}
+
 }
   
